# Proyecto-1-Programacion2

./: Decoraciones.cpp  Decoraciones.h  Item.cpp  Item.h  Iterador.h  Jugador.cpp  Jugador.h  Lista.h  Llantas.cpp  Llantas.h  Motor.cpp  Motor.h  Nitro.cpp  Nitro.h  Nodo.h  README.md  Tienda.cpp  Tienda.h  Utilidades.h  Vehiculo.cpp  Vehiculo.h  main.cpp
Decoraciones Vehiculos/: Archivadora.cpp  Archivadora.h  CMakeLists.txt  Decoraciones.cpp  Decoraciones.h  Item.cpp  Item.h  Iterador.h  Jugador.cpp  Jugador.h  Lista.h  Llantas.cpp  Llantas.h  Motor.cpp  Motor.h  Nitro.cpp  Nitro.h  Nodo.h  Tienda.cpp  Tienda.h  Vehiculo.cpp  Vehiculo.h  main.cpp
Decorador-Vehiculo/: Decoraciones.cpp  Decoraciones.h  Item.h  Jugador.cpp  Jugador.h  Lista.h  Llantas.cpp  Llantas.h  Motor.cpp  Motor.h  Nitro.cpp  Nitro.h  Tienda.cpp  Tienda.h  Vehiculo.cpp  Vehiculo.h
Version corregida buena/: CMakeLists.txt  Decoraciones.h  Item.cpp  Item.h  Iterador.h  Jugador.cpp  Jugador.h  Lista.h  Llantas.cpp  Llantas.h  Motor.cpp  Motor.h  Nitro.cpp  Nitro.h  Tienda.cpp  Tienda.h  Utilidades.h  Vehiculo.cpp  Vehiculo.h  main.cpp
